public abstract class Talpa {
    
}
