classDiagram
direction TB
    class Gestore {
	    +int age
	    +String gender
	    +isMammal()
	    +mate()
    }

    class Buca {
	    +String beakColor
	    +swim()
	    +quack()
    }

    class Interfaccia {
	    -int sizeInFeet
	    -canEat()
    }

    class Talpa {
    }

    class Giocatore {
	    +bool is_wild
	    +run()
    }

    class Classifica {
    }

    Gestore <|-- Buca
    Gestore <|-- Interfaccia
    Gestore <|-- Giocatore
    Talpa -- Buca